--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Pomofi</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>PomoFi - Timer Pomodoro® com Música LoFi</title>
+    <base href="/" />
+
+    <meta
+      name="description"
+      content="A Técnica Pomodoro® é um método de gerenciamento de tempo desenvolvido por Francesco Cirillo no final dos anos 1980. A técnica consiste na utilização de um cronômetro para dividir o trabalho em períodos de 25 minutos, separados por breves intervalos."
+    />
+    <meta property="og:locale" content="pt_BR" />
+    <meta
+      property="og:title"
+      content="PomoFi - Timer Pomodoro® com Música LoFi"
+    />
+    <meta
+      property="og:site_name"
+      content="PomoFi - Timer Pomodoro® com Música LoFi"
+    />
+    <meta
+      property="og:description"
+      content="A Técnica Pomodoro® é um método de gerenciamento de tempo desenvolvido por Francesco Cirillo no final dos anos 1980. A técnica consiste na utilização de um cronômetro para dividir o trabalho em períodos de 25 minutos, separados por breves intervalos."
+    />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="180x180"
+      href="./assets/favicon.png"
+    />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
+ 
