--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,10 @@
       sizes="180x180"
       href="./assets/favicon.png"
     />
-  </head>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
   <body>
     <app-root></app-root>
   </body>
